# book_voice_bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bot/: __main__.py
